--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,24 +1,36 @@
 workflows:
-  ios-app:
-    name: Build iOS App
+  ios-workflow:
+    name: Build Zeus iOS App
     instance_type: mac_mini_m1
     environment:
       xcode: latest
+      vars:
+        APP_NAME: "ChatZeus"
     scripts:
+      - name: Install dependencies
+        script: | 
+          echo "--- Installing xcode-project-gen ---"
+          brew install xcode-project-gen
+          echo "--- Installation complete ---"
       - name: Create Xcode Project
         script: | 
-          xcode-project-gen --name ChatZeus-iOS --type app --interface swiftui
+          echo "--- Creating Xcode project for $APP_NAME ---"
+          xcode-project-gen --name "$APP_NAME" --type app --interface swiftui --assets "ChatZeus-iOS/icon.png"
+          echo "--- Xcode project created successfully ---"
       - name: Build and Export IPA
         script: | 
-          xcodebuild -project "ChatZeus-iOS.xcodeproj" \
-                     -scheme "ChatZeus-iOS" \
+          echo "--- Starting archive process ---"
+          xcodebuild -project "$APP_NAME.xcodeproj" \
+                     -scheme "$APP_NAME" \
                      -sdk iphoneos \
                      -configuration Release \
-                     archive -archivePath $CM_BUILD_DIR/build/ChatZeus-iOS.xcarchive
+                     archive -archivePath "$CM_BUILD_DIR/build/$APP_NAME.xcarchive"
           
+          echo "--- Starting export process ---"
           xcodebuild -exportArchive \
-                     -archivePath $CM_BUILD_DIR/build/ChatZeus-iOS.xcarchive \
-                     -exportPath $CM_BUILD_DIR/build/export \
+                     -archivePath "$CM_BUILD_DIR/build/$APP_NAME.xcarchive" \
+                     -exportPath "$CM_BUILD_DIR/build/export" \
                      -exportOptionsPlist /Users/builder/exportOptions.plist
+          echo "--- IPA exported successfully ---"
     artifacts:
       - $CM_BUILD_DIR/build/export/*.ipa
