--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,28 +6,22 @@ workflows:
       xcode: latest
       vars:
         APP_NAME: "ChatZeus"
-      # --- هذا هو المكان الصحيح لإعدادات التوقيع ---
-      ios_signing:
-        provisioning_profile_type: AD_HOC
-    # ---------------------------------------------
     scripts:
-      - name: Install dependencies
+      - name: Create and Build Project
         script: | 
+          # الخطوة 1: تثبيت الأداة
           brew install xcode-project-gen
-      - name: Create Xcode Project
-        script: | 
+
+          # الخطوة 2: إنشاء مشروع Xcode
           xcode-project-gen --name "$APP_NAME" --type app --interface swiftui --assets "ChatZeus-iOS/icon.png"
-      - name: Build and Export IPA
-        script: | 
-          xcodebuild -project "$APP_NAME.xcodeproj" \
-                     -scheme "$APP_NAME" \
-                     -sdk iphoneos \
-                     -configuration Release \
-                     archive -archivePath "$CM_BUILD_DIR/build/$APP_NAME.xcarchive"
-          
-          xcodebuild -exportArchive \
-                     -archivePath "$CM_BUILD_DIR/build/$APP_NAME.xcarchive" \
-                     -exportPath "$CM_BUILD_DIR/build/export" \
-                     -exportOptionsPlist /Users/builder/exportOptions.plist
+
+          # الخطوة 3: بناء التطبيق (بدون أرشفة أو تصدير)
+          xcodebuild build -project "$APP_NAME.xcodeproj" \
+                           -scheme "$APP_NAME" \
+                           -sdk iphoneos \
+                           -configuration Release \
+                           CODE_SIGN_IDENTITY="" \
+                           CODE_SIGNING_REQUIRED=NO
     artifacts:
-      - $CM_BUILD_DIR/build/export/*.ipa
+      # الخطوة 4: أرشفة مجلد .app الناتج
+      - $CM_BUILD_DIR/build/Release-iphoneos/*.app
