--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,27 +1,25 @@
 workflows:
-  ios-workflow:
-    name: Build Zeus iOS App
+  ios-unsigned-app:
+    name: Build Unsigned iOS App
     instance_type: mac_mini_m1
     environment:
       xcode: latest
-      vars:
-        APP_NAME: "ChatZeus"
     scripts:
-      - name: Create and Build Project
-        script: | 
-          # الخطوة 1: تثبيت الأداة
-          brew install xcode-project-gen
+      - name: Generate Xcode project from Swift files
+        script: |
+          xcode-project-gen --name ChatZeus --type app --interface swiftui
+      - name: Build unsigned IPA
+        script: |
+          xcodebuild -project "ChatZeus.xcodeproj" \
+                    -scheme "ChatZeus" \
+                    -sdk iphoneos \
+                    -configuration Release \
+                    -archivePath $CM_BUILD_DIR/build/ChatZeus.xcarchive \
+                    CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
 
-          # الخطوة 2: إنشاء مشروع Xcode
-          xcode-project-gen --name "$APP_NAME" --type app --interface swiftui --assets "ChatZeus-iOS/icon.png"
-
-          # الخطوة 3: بناء التطبيق (بدون أرشفة أو تصدير)
-          xcodebuild build -project "$APP_NAME.xcodeproj" \
-                           -scheme "$APP_NAME" \
-                           -sdk iphoneos \
-                           -configuration Release \
-                           CODE_SIGN_IDENTITY="" \
-                           CODE_SIGNING_REQUIRED=NO
+          xcodebuild -exportArchive \
+                    -archivePath $CM_BUILD_DIR/build/ChatZeus.xcarchive \
+                    -exportPath $CM_BUILD_DIR/build/export \
+                    -exportOptionsPlist /Users/builder/exportOptions.plist
     artifacts:
-      # الخطوة 4: أرشفة مجلد .app الناتج
-      - $CM_BUILD_DIR/build/Release-iphoneos/*.app
+      - $CM_BUILD_DIR/build/export/*.ipa
